--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "@fontsource/roboto": "^5.0.3",
     "@mui/material": "^5.13.5",
     "@planetscale/database": "^1.7.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@react-google-maps/api": "^2.18.1",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
     "cheerio": "^1.0.0-rc.12",
+    "class-variance-authority": "^0.6.1",
+    "clsx": "^1.2.1",
     "drizzle-orm": "^0.27.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "https-proxy-agent": "^7.0.0",
+    "lucide-react": "^0.258.0",
     "next": "13.4.5",
     "next-usequerystate": "^1.7.3",
     "node-fetch": "^3.3.1",
@@ -34,7 +38,9 @@
     "react-dom": "18.2.0",
     "react-google-charts": "^4.0.0",
     "react-minimal-pie-chart": "^8.4.0",
+    "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.3"
   },
   "devDependencies": {
