--- a/package.json
+++ b/package.json
@@ -10,21 +10,33 @@
     "db:push": "drizzle-kit push:mysql --config ./drizzle.config.ts"
   },
   "dependencies": {
+    "@algolia/autocomplete-js": "^1.9.4",
+    "@algolia/autocomplete-plugin-query-suggestions": "^1.9.4",
+    "@algolia/autocomplete-plugin-recent-searches": "^1.9.4",
+    "@algolia/autocomplete-theme-classic": "^1.9.4",
     "@clerk/nextjs": "^4.21.8",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.3",
     "@mui/material": "^5.13.5",
     "@planetscale/database": "^1.7.0",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.4",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@react-google-maps/api": "^2.18.1",
+    "@tanstack/react-table": "^8.9.3",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "algoliasearch": "^4.18.0",
     "autoprefixer": "10.4.14",
     "cheerio": "^1.0.0-rc.12",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
+    "cmdk": "^0.2.0",
     "drizzle-orm": "^0.27.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
@@ -37,11 +49,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-charts": "^4.0.0",
+    "react-instantsearch-hooks-web": "^6.45.1",
     "react-minimal-pie-chart": "^8.4.0",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "drizzle-kit": "^0.19.1"
