--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-google-charts": "^4.0.0",
     "react-instantsearch-hooks-web": "^6.45.1",
     "react-minimal-pie-chart": "^8.4.0",
+    "recharts": "^2.7.2",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
