--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
     "cheerio": "^1.0.0-rc.12",
+    "csv-parse": "^5.5.5",
+    "csv-stringify": "^6.4.6",
     "drizzle-orm": "^0.27.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
